syntax = "proto3";

package model;
import "google/protobuf/Empty.proto";

service SalesService{
    rpc NewOrder(OrderProduct) returns (AfterOrder) {}
}

message OrderProduct{
    string idproduct = 1;
}

message AfterOrder{
    string Idorder = 1;
    string Idproduct = 2;
    string Nameproduct = 3;
    string Bill = 4;
    string Status_Payment = 5;
}

